# pydev-guide.github.io

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  astro.config.mjs  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: deploy-pages.yml
docs/: demo.md  further.md  glossary.md  index.md  notebook.ipynb  quickstart.md
docs/.overrides/: main.html
docs/.overrides/partials/: breadcrumbs.html  content_next.html  nav-item.html  source-file.html  toc.html
docs/guides/: build_system.md  dependencies.md  documentation.md  environments.md  ides.md  index.md  packaging.md  pre-commit.md  publishing.md  pyproject.md  testing.md  typing.md  versioning.md
docs/javascripts/: extra.js
docs/overrides/: main.html
docs/overrides/partials/: content.html  content_next.html  nav-item.html  source-file.html  toc.html
docs/stylesheets/: extra.css  termynal.css
docs/tutorial/: bare_minimum.md  index.md  project_metadata.md  summary.md  testing.md
docs/tutorial/code_quality/: code_quality.md  formatter.md  linter.md  pre_commit_hooks.md  type_checking.md
docs/tutorial/github/: continuous_integration.md  deployment.md  github_apps.md
docs/tutorial/pre_requisite/: ide.md  version_control.md  virtual_environment.md
docs/tutorial/testing/: code_to_be_tested.md  real_tests.md  (+7 more)
site/: 404.html  index.html
site/demo/: index.html
site/glossary/: index.html
site/javascripts/: extra.js
site/search/: search_index.json
site/tutorial/: index.html
src/: consts.ts
src/styles/: index.css
(+11 files in other folders)
