[project]
name = "pydev-guide-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs-git-committers-plugin>=0.2.3",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "mkdocs-material>=9.6.20",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-spellcheck[all]>=1.1.2",
]

[dependency-groups]
dev = ["pre-commit-uv>=4.1.5"]
